fix: spacing

--- a/src/pages/product/ProductDetail.module.css
+++ b/src/pages/product/ProductDetail.module.css
@@ -1,41 +1,41 @@
-.main-container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 2rem 2rem 2rem 2rem;
-    background-color: #EDEDED;
+.main-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 2rem 2rem 2rem 2rem;
+  background-color: #ededed;
 }
-.left-container{
-    width: 40%;
-    padding-left: 2rem;
-    padding-right: 2rem;
+.left-container {
+  width: 40%;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
-.right-container{
-    width: 60%;
-    padding-left: 2rem;
-    padding-right: 2rem;
+.right-container {
+  width: 60%;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 @media (max-width: 768px) {
-    .main-container{
-        flex-direction: column;
-    }
-    .left-container{
-        width: 100%;
-    }
-    .right-container{
-        width: 100%;
-    }
+  .main-container {
+    flex-direction: column;
   }
-  @media (max-width: 675px) {
-    .main-container{
-        min-width: 425px;
-        padding: 1rem;
-    }
-    .left-container{
-        padding: 0;
-    }
-    .right-container{
-        padding: 0;
-    }
+  .left-container {
+    width: 100%;
   }
+  .right-container {
+    width: 100%;
+  }
+}
+@media (max-width: 675px) {
+  .main-container {
+    min-width: 425px;
+    padding: 1rem;
+  }
+  .left-container {
+    padding: 0;
+  }
+  .right-container {
+    padding: 0;
+  }
+}
